# PID-auto-tuner

./: .gitignore  ALGORITHMS.md  LICENSE  README.md  generate_data.py  pyproject.toml  requirements.txt  run.bat  setup_runtime.ps1  template.csv  template.xlsx
src/: analysis.py  app.py  diagnosis.py  evaluation.py  ingestion.py  modeling.py  simulation.py  tuning.py
test_data_suite/: 0_initial.csv  1_iter.csv  2_iter.csv  3_iter.csv  4_iter.csv  5_iter.csv
tests/: test_analysis.py  test_diagnosis.py  test_diagnosis_extended.py  test_evaluation.py  test_ingestion.py  test_modeling.py  test_simulation.py  test_tuning.py  test_valve_diagnosis.py  test_workflow.py
